--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,17 +16,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 body {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 a {
   color: inherit;
   text-decoration: none;
-}
-
-/* Utilites */
-
-@layer utilities {
-  . scroll-snap-align-start {
-    scroll-snap-align: start;
-  }
 }
