--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  text-transform: uppercase;
 }
 
 html,
@@ -20,6 +21,6 @@ body {
   overflow-y: hidden;
 }
 a {
-  color: inherit;
+  color: pointer;
   text-decoration: none;
 }
