--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,9 @@ body {
   width: 100vw;
   overflow-x: hidden;
 }
+#__next {
+  height: 100vh;
+}
 a {
   color: pointer;
   text-decoration: none;
